--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             <div class="row text-kryp" style="margin-top: -350px;">
                 <div class="center" style="position:fixed;">
                     <h1 class="uppercase">Kryptos <br/><br/>
-                        <span>KRYPTOS guarantees the identity integrity of people, apps and things needed to run a digital business.</span>
+                        <span>KRYPTOS garantiza la seguridad e integridad de la información en aplicaciones y soluciones del mundo digital .</span>
                     </h1>
                     <!-- <img class="responsive-img logo-portada" src="images/logo_blanco.svg"> -->
                     <br>
@@ -341,7 +341,7 @@
                 <hr/>
                 <div class="row">
                     <div class="offset-m3 col m6">
-                        <p class="flow-text"><span class="trn">Somos una compañía altamente especializada en el diseño e implementación de</span> <span class="blue-text trn">estrategias integrales de seguridad</span> <span class="trn">ofreciendo a nuestros clientes <strong>Confidencialidad, integridad, autentificación y no repudio.</strong> Carácteristicas pilares de la criptografía.</span>
+                        <p class="flow-text"><span class="trn">Somos una compañía altamente especializada en el diseño e implementación de</span> <span class="blue-text trn">estrategias integrales de seguridad</span> <span class="trn">ofreciendo a nuestros clientes <strong>Confidencialidad, integridad y autentificación.</strong> Carácteristicas pilares de la seguridad informática.</span>
                         </p>
                     </div>
                 </div>
@@ -352,7 +352,7 @@
                     </div>
                     <div class=" offset-m3 col m6 ">
                         <p class="center-align">
-                            <span class="trn">Nuestro propósito es garantizar el crecimiento y el desarrollo económico, maximizando la seguridad de las personas, activos e inversiones de las compañías dedicadas a las diferentes lineas de negocio de la energía. </span>
+                            <span class="trn">Nuestro propósito es garantizar el crecimiento y el desarrollo, maximizando la seguridad de la información, activos e inversiones de las compañías dedicadas a las diferentes lineas de negocio. </span>
                         </p>
                     </div>
                 </div>
@@ -448,15 +448,19 @@
             <div class="row">
                 <div class="offset-m3 col m6">
                     <p class="white-text">
-                        <span class="trn">Somos una empresa que diseña e implementa estrategias de seguridad integrales, garantizando la gestión de pérdidas asociadas tanto a procesos y procedimientos como a actos delictivos, fundada por expertos en seguridad informática y empresarial con amplia experiencia nacional e internacional.</span>
+                        <span class="trn">Somos una empresa que diseña e implementa estrategias de seguridad integrales, garantizando la gestión segura de información procesos y procedimientos, fundada por expertos en seguridad informática del IPN y del sector empresarial con amplia experiencia nacional e internacional.</span>
                     </p>
+                </div>
+                <div class="col s12 m12 l12">
+                    <img style="margin-right:18px; margin-top:0px;" height="100px" src="images/ipn.png" alt="ipn">
+                    <img style="margin-left:18px; margin-top:0px;" height="90px" src="images/cidetec.gif" alt="ipn">
                 </div>
             </div>
         </div>
         <div class="row white">
             <div class="offset-m3 col m6">
                 <h3 class="center-align uppercase">
-                    <span class="trn">Somos especialistas en análisis de riesgo, selección de tecnologías, auditorías, asesoría jurídica, controles de balances volumétricos, seguridad física y manejo de crisis.</span>
+                    <span class="trn">Soluciones seguridad informática y esquemas de comunicación segura AES, 3DES entre otros. Así como soluciones en desarrollo web con protocolos seguridad de ultima generación.</span>
                 </h3>
                 <hr/>
             </div>
@@ -471,40 +475,9 @@
             <h2 class="uppercase white-text"><span class="trn">Contáctanos</span></h2>
             <hr/>
             <div class="row mg-top">
-                <div class="offset-m1 col m4 s12">
-                    <h5 class="uppercase white-text"><span class="trn">Dirección</span></h5>
-                    <address class="white-text">
-						Montes Urales 720, Lomas de Chapultepec, Miguel Hidalgo, Ciudad de México 
-					</address>
-                    <!-- mapa -->
-                    <div class="row map">
-                        <div id="map"></div>
-                        <script>
-                            function initMap() {
-                                var pos = {
-                                    lat: 19.425236,
-                                    lng: -99.203990
-                                };
-                                var mapDiv = document.getElementById('map');
-                                var map = new google.maps.Map(mapDiv, {
-                                    center: pos,
-                                    scrollwheel: false,
-                                    zoom: 17
-                                });
-                                var marker = new google.maps.Marker({
-                                    position: pos,
-                                    map: map
-                                        //icon: '/img/80YjG.png'
-                                });
-                            }
-                        </script>
-                        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDz8oD9L03dn2VXjBNaOaiGE8lf-UyZtQk&callback=initMap" async defer></script>
-                    </div>
-                    <!-- FIN- mapa -->
-                </div>
-                <div class="col m7">
+                <div class="col m8 s12">
                     <!-- Formulario -->
-                    <div class="row" style="margin-top: 90px;">
+                    <div class="row" style="margin-top: 10px;">
                         <form class=" col m9 s12" name="contact">
                             <div class="row">
                                 <div class="input-field col m6 s12">
@@ -550,6 +523,38 @@
                         </form>
                     </div>
                     <!-- FIN-formulario -->
+                </div>
+                <div class="col m4" style="margin-left: -75px;">
+                    <h5 class="uppercase white-text"><span class="trn">Dirección</span></h5>
+                    <address class="white-text">
+						Montes Urales 720, Lomas de Chapultepec, Miguel Hidalgo, Ciudad de México 
+					</address>
+                    <!-- mapa -->
+                    <div class="row map">
+                        <div id="map"></div>
+                        <script>
+                            function initMap() {
+                                var pos = {
+                                    lat: 19.425236,
+                                    lng: -99.203990
+                                };
+                                var mapDiv = document.getElementById('map');
+                                var map = new google.maps.Map(mapDiv, {
+                                    center: pos,
+                                    scrollwheel: false,
+                                    zoom: 17
+                                });
+                                var marker = new google.maps.Marker({
+                                    position: pos,
+                                    map: map
+                                        //icon: '/img/80YjG.png'
+                                });
+                            }
+                        </script>
+                        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDz8oD9L03dn2VXjBNaOaiGE8lf-UyZtQk&callback=initMap" async defer></script>
+                    </div>
+                    <!-- FIN- mapa -->
+
                 </div>
             </div>
         </div>
