--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 <div class="navbar-fixed">
                     <nav class="">
                         <div class="nav-wrapper container">
-                            <a href="#" class="logo-petrosec brand-logo"><img class " responsive-img" src=""></a>
+                            <a href="#" class="logo-petrosec brand-logo"><img style="margin-top: 15px;" width="100px" height="50px;" class="responsive-img" src="images/kryptoslogo.png"></a>
                             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="black-text mdi-navigation-menu"></i></a>
                             <ul id="nav-web" class="right hide-on-med-and-down">
                                 <li><a href="#nosotros"><span class="trn">Nosotros</span></a></li>
@@ -337,7 +337,7 @@
         <a name="nosotros"></a>
         <div class="container-fluid">
             <div class="center-align">
-                <h2 class="uppercase"><span class="trn">Sobre nosotros</span></h2>
+                <a style="color: rgb(241,88,42);" href="/blog"> <h2 class="uppercase"><span class="trn">Sobre nosotros</span></h2></a>
                 <hr/>
                 <div class="row">
                     <div class="offset-m3 col m6">
@@ -365,13 +365,13 @@
     <section class="about ">
         <a name="vision"></a>
         <div class="parallax-container">
-            <div class="parallax"><img src="images/files.jpg"></div>
+            <div class="parallax"><img src="images/hero2.jpg"></div>
             <div class="">
-                <h2 style="margin-left:10px;" class="uppercase white-text"><span class="trn">Soluciones tecnologícas de seguridad</span></h2>
-                <div class="row">
-                    <div class="offset col m6">
-                        <p class="white-text">
-                            <span class="trn">Usamos criptografía simetrica y asimetrica para apoyar que apoye a diferentes industrias a minimizar los riesgos asociados a sus datos, maximizando así su confiabilidad y generación de valor.</span>
+                <h2  class="uppercase white-text" style="float: right; margin-right: 10px;"><span class="trn">Soluciones tecnologícas de seguridad</span></h2>
+                <div class="row" >
+                    <div class="offset col m6" style="margin: 10px 0 0 800px; ">
+                        <p class="white-text"  >
+                            <span style="float: right;" class="trn">Usamos criptografía simetrica y asimetrica para apoyar que apoye a diferentes industrias a minimizar los riesgos asociados a sus datos, maximizando así su confiabilidad y generación de valor.</span>
                         </p>
                     </div>
                 </div>
@@ -388,12 +388,12 @@
 
                 <div class="row">
                     <div class="blue-box offset-m2 col m8">
-                        <h2 class="uppercase"><span class="trn">Alianzas estratégicas</span></h2>
+                        <h2 class="uppercase"><span style="color: rgb(241,88,42);" class="trn">Alianzas estratégicas</span></h2>
                         <hr style="width: 10%;" />
                         <div class="row">
                             <div class="offset-m1 col m10">
                                 <p class="blue-padding">
-                                    <span class="trn">Contamos con investigadores y empresarios, destacados en su ramo </span><span class="trn blue-text">somos una fuente confiable </span><span class="trn">de protección y análisis de datos.</span>
+                                    <span class="trn">Contamos con investigadores y empresarios, destacados en su ramo </span><span style="color: rgb(241,88,42);" class="trn">somos una fuente confiable </span><span class="trn">de protección y análisis de datos.</span>
                                 </p>
                             </div>
                         </div>
@@ -443,7 +443,7 @@
     <section class="why-us">
         <a name="porque-nosotros"></a>
         <div class="center-align bg-porque">
-            <h2 class="uppercase white-text"><span class="trn">En qué nos diferenciamos</span></h2>
+            <h2 class="uppercase white-text"><span  class="trn">En qué nos diferenciamos</span></h2>
             <hr/>
             <div class="row">
                 <div class="offset-m3 col m6">
@@ -527,7 +527,7 @@
                 <div class="col m4" style="margin-left: -75px;">
                     <h5 class="uppercase white-text"><span class="trn">Dirección</span></h5>
                     <address class="white-text">
-						Montes Urales 720, Lomas de Chapultepec, Miguel Hidalgo, Ciudad de México 
+						Calle Salama 546, Gustavo A. Madero, Valle del Tepeyac, 07740, Ciudad de México.
 					</address>
                     <!-- mapa -->
                     <div class="row map">
@@ -535,8 +535,8 @@
                         <script>
                             function initMap() {
                                 var pos = {
-                                    lat: 19.425236,
-                                    lng: -99.203990
+                                    lat: 19.487802,
+                                    lng: -99.1456319
                                 };
                                 var mapDiv = document.getElementById('map');
                                 var map = new google.maps.Map(mapDiv, {
@@ -566,7 +566,7 @@
         <div class="container">
             <div class="row">
                 <div class="col s6">
-                    <a href=""><span class="trn">© 2016 Derechos reservados Criptos</span></a>
+                    <a href=""><span class="trn">© 2017 Derechos reservados Kryptos</span></a>
                 </div>
                 <div class="col s3">
                     <a href=""><span class="trn">Políticas de privacidad</span></a>
