cambios de contenido

--- a/index.html
+++ b/index.html
@@ -286,10 +286,11 @@
                             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="black-text mdi-navigation-menu"></i></a>
                             <ul id="nav-web" style="margin-top: 15px;" class="right hide-on-med-and-down">
                                 <li><a style="color: rgb(48, 49, 124);" href="#nosotros"><span class="trn">Nosotros</span></a></li>
-                                <li><a style="color: rgb(48, 49, 124); href="#vision"><span class="trn">Visión</span></a></li>
-                                <li><a style="color: rgb(48, 49, 124); href="#alianzas"><span class="trn">Alianzas</span></a></li>
-                                <li><a style="color: rgb(48, 49, 124); href="#porque-nosotros"><span class="trn">Por qué nosotros</span></a></li>
-                                <li><a style="color: rgb(48, 49, 124); href="#contacto"><span class="trn">Contacto</span></a></li>
+                                <li><a style="color: rgb(48, 49, 124);" href="#vision"><span class="trn">Visión</span></a></li>
+                                <li><a style="color: rgb(48, 49, 124);" href="#alianzas"><span class="trn">Alianzas</span></a></li>
+                                <li><a style="color: rgb(48, 49, 124);" href="#porque-nosotros"><span class="trn">Por qué nosotros</span></a></li>
+                                <li><a style="color: rgb(48, 49, 124);" href="#contacto"><span class="trn">Contacto</span></a></li>
+                                <li><a style="color: rgb(48, 49, 124);" href="/blog"><span class="">Blog</span></a></li>
                                 <li>
                                     <a class=' btn-style transparent dropdown-button btn white-text' href='#' data-activates='dropdown1'><i class="fa fa-caret-down right" aria-hidden="true"></i><span class=" mg-btn" id="current_lang"><i class="lan-ico white-text material-icons">language</i></span></a>
                                     <ul id='dropdown1' class='dropdown-content lan-ul'>
@@ -328,6 +329,7 @@
                                 <li><a href="#alianzas"><span class="trn">Alianzas</span></a></li>
                                 <li><a href="#porque-nosotros"><span class="trn">Por qué nosotros</span></a></li>
                                 <li><a href="#contacto"><span class="trn">Contacto</span></a></li>
+                                <li><a href="/blog"><span class="trn">Blog</span></a></li>
                             </ul>
                         </div>
                     </nav>
@@ -359,15 +361,12 @@
                 <hr/>
                 <div class="row">
                     <div class="offset-m3 col m6">
-                        <p class="flow-text"><span class="trn">Somos una compañía altamente especializada en el diseño e implementación de</span> <span class="blue-text trn">estrategias integrales de seguridad</span> <span class="trn">ofreciendo a nuestros clientes <strong>Confidencialidad, integridad y autentificación.</strong> Carácteristicas pilares de la seguridad informática.</span>
+                        <p class="flow-text"><span class="trn">Somos una compañía altamente especializada en el diseño e implementación de</span> <span class="blue-text trn">estrategias integrales de seguridad</span> <span class="trn">ofreciendo a nuestros clientes <a href="/blog">Confidencialidad, integridad y autentificación y no repudio.</a> Carácteristicas pilares de la seguridad informática.</span>
                         </p>
                     </div>
                 </div>
-                <div class="row indigo lighten-5" style="margin-bottom:0px;/">
-                    <div class="triangulo"></div>
-                    <div class="center-align" center>
-                        <img class="responsive-img" alt="crecimiento" src="images/ic_1.png">
-                    </div>
+                <div class="row indigo lighten-5" style="margin-bottom:0px;">
+                    
                     <div class=" offset-m3 col m6 ">
                         <p class="center-align">
                             <span class="trn">Nuestro propósito es garantizar el crecimiento y el desarrollo, maximizando la seguridad de la información, activos e inversiones de las compañías dedicadas a las diferentes lineas de negocio. </span>
@@ -389,7 +388,7 @@
                 <div class="row" >
                     <div class="offset col m6" style="margin: 10px 0 0 800px; ">
                         <p class="white-text"  >
-                            <span style="float: right;" class="trn">Usamos criptografía simetrica y asimetrica para apoyar que apoye a diferentes industrias a minimizar los riesgos asociados a sus datos, maximizando así su confiabilidad y generación de valor.</span>
+                            <span style="float: right;" class="trn">Usamos <a href="/blog"> criptografía simetrica y asimetrica </a>para apoyar que apoye a diferentes industrias a minimizar los riesgos asociados a sus datos, maximizando así su confiabilidad y generación de valor.</span>
                         </p>
                     </div>
                 </div>
@@ -411,7 +410,7 @@
                         <div class="row">
                             <div class="offset-m1 col m10">
                                 <p class="blue-padding">
-                                    <span class="trn">Contamos con investigadores y empresarios, destacados en su ramo </span><span style="color: rgb(241,88,42);" class="trn">somos una fuente confiable </span><span class="trn">de protección y análisis de datos.</span>
+                                    <span class="trn">Contamos con investigadores, destacados en su ramo </span><span style="color: rgb(241,88,42);" class="trn">somos una fuente confiable </span><span class="trn">de protección y análisis de seguridad de datos respaldada por investigadores de alto nivel en el area de ciber seguridad</span>
                                 </p>
                             </div>
                         </div>
@@ -423,7 +422,7 @@
                     <div class="triangulo"></div>
                     <div class="container indigo lighten-5">
                         <div class="row">
-                            <div class="col s12 m6 l6">
+                            <div class="col s12 m6 l4">
                                 <div class="row">
                                     <div class="offset-m1 col m10">
                                         <div class="center-align">
@@ -436,7 +435,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col s12 m6 l6 ">
+                            <div class="col s12 m6 l4 ">
                                 <div class="row">
                                     <div class="offset-m1 col m10">
                                         <div class="center-align">
@@ -448,6 +447,17 @@
                                         </p>
                                     </div>
                                 </div>
+                            </div>
+                            <div class=" offset-m3 col m6 l4 ">
+
+                                <div class="center-align" center>
+                                    <img class="responsive-img" alt="crecimiento" src="images/ic_1.png">
+                                </div>
+                                <h4 class="uppercase"><span class="trn">Crecimiento y Desarrollo</span></h4>
+                                <p class="center-align">
+                                    <span class="trn">Nuestro propósito es garantizar el crecimiento y el desarrollo, maximizando la seguridad de la información, activos e inversiones de las compañías dedicadas a las diferentes lineas de negocio. </span>
+                                </p>
+
                             </div>
                         </div>
                     </div>
@@ -478,7 +488,7 @@
         <div class="row white">
             <div class="offset-m3 col m6">
                 <h3 class="center-align uppercase">
-                    <span class="trn">Soluciones seguridad informática y esquemas de comunicación segura AES, 3DES entre otros. Así como soluciones en desarrollo web con protocolos seguridad de ultima generación.</span>
+                    <span class="trn">Soluciones seguridad informática a través de la generación de aplicativos para empresas e instituciones. Así como soluciones en desarrollo web con protocolos seguridad de ultima generación.</span>
                 </h3>
                 <hr/>
             </div>
